--- a/src/app/modules/home/components/todo-list/todo-list.component.scss
+++ b/src/app/modules/home/components/todo-list/todo-list.component.scss
@@ -3,15 +3,27 @@ div {
   height: 400px;
   overflow-y: auto;
 }
+
 div > ul {
-  border:1px solid blue;
   padding: 0;
 }
 
 div > ul > li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   list-style-type: none;
-  border:1px solid red;
   padding:1em 0 1em 1em;
+  gap:10px;
+}
+
+div > ul > li > button {
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+div > h3 {
+  text-align: center;
 }
 
 .active {
